<resources>
    <string name="app_name">LOP</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="birthday">Birthdate</string>
    <string name="click_to_set_date">Click here to Set Date</string>
    <string name="next">Next</string>
    <string name="result">Result</string>
    <string name="skip">Skip</string>
    <string name="achievement_lists">Achievement Lists</string>
    <string name="tips_lists">Tips Lists</string>
    <string name="target_lists">Target Lists</string>
    <string name="position">%d/%d</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="editor_insert_data_failed">Failed</string>
    <string name="editor_insert_data_successful">Success</string>
    <string name="lets_do_a_target">Lets Do a Target</string>
    <string name="do_it_now">Do It Now!</string>
    <string name="skip_it">Skip!</string>
</resources>
