<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.d3ifcool.lop.views.HomeActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            android:text="@string/target_lists"
            android:textSize="@dimen/text_size_medium"
            android:onClick="goToTarget"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            android:text="@string/tips_lists"
            android:textSize="@dimen/text_size_medium"
            android:onClick="goToTips"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            android:text="@string/achievement_lists"
            android:textSize="@dimen/text_size_medium"
            android:onClick="goToAchieve"/>
    </LinearLayout>
</layout>
