<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.lop.views.AlarmActivity"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    android:gravity="center">

    <TextView
        android:text="@string/lets_do_a_target"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_margin="@dimen/margin_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:padding="@dimen/margin_medium"
            android:text="@string/do_it_now"
            android:onClick="doTarget"
            android:layout_marginRight="@dimen/margin_medium"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:padding="@dimen/margin_medium"
            android:onClick="skipTarget"
            android:text="@string/skip_it"/>
    </LinearLayout>

</LinearLayout>
