<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/birthplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_place" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/birthday"
                android:layout_gravity="center"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/setbirthdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/click_to_set_date"
                android:textSize="16sp"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <Spinner
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/genders"/>

        <Button
            android:id="@+id/signin"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</layout>
